<?xml version="1.0"?>
<package>
  <name>provider_sonar</name>
  <version>0.0.1</version>
  <description>The provider_sonar package</description>

  <maintainer email="dozois.a@gmail.com">Antoine Dozois</maintainer>

  <license>MIT</license>


  <!-- Required by Catkin --> 
  <buildtool_depend>catkin</buildtool_depend> 
  
  <!-- Package Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
